[gd_scene load_steps=10 format=3 uid="uid://c6j6oangcppih"]

[ext_resource type="Script" path="res://main.gd" id="1_0wmlj"]
[ext_resource type="Script" path="res://Camera2D.gd" id="1_knqyb"]
[ext_resource type="Script" path="res://TileMap.gd" id="2_cqj61"]
[ext_resource type="TileSet" uid="uid://1yc0pq1j0wb" path="res://tileset.tres" id="4_asfbm"]
[ext_resource type="Script" path="res://Network.gd" id="4_b2sue"]
[ext_resource type="PackedScene" uid="uid://bvg6orivi3vvd" path="res://player.tscn" id="6_2hnmn"]
[ext_resource type="PackedScene" uid="uid://b35toih8wxky3" path="res://hover_square.tscn" id="7_flrrs"]
[ext_resource type="StyleBox" uid="uid://csx6cf6g688pf" path="res://sep_style.tres" id="8_xm0ke"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mjxie"]
bg_color = Color(0.145098, 0.156863, 0.239216, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 12

[node name="Main" type="Node2D"]
script = ExtResource("1_0wmlj")

[node name="Network" type="Node" parent="."]
script = ExtResource("4_b2sue")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(504, 273)
limit_left = -100
limit_top = -100
limit_right = 1200
limit_bottom = 800
position_smoothing_enabled = true
position_smoothing_speed = 3.0
script = ExtResource("1_knqyb")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("4_asfbm")
format = 2
layer_0/name = "Floor"
layer_1/name = "food"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "minerals"
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array()
script = ExtResource("2_cqj61")

[node name="Player" parent="TileMap" instance=ExtResource("6_2hnmn")]
position = Vector2(500, 500)

[node name="HoverSquare" parent="TileMap" instance=ExtResource("7_flrrs")]
position = Vector2(66, 305)

[node name="CanvasLayer" type="CanvasLayer" parent="TileMap"]

[node name="PanelContainer" type="PanelContainer" parent="TileMap/CanvasLayer"]
modulate = Color(1, 1, 1, 0.776471)
offset_left = 1554.0
offset_top = 37.0
offset_right = 2160.0
offset_bottom = 289.0
scale = Vector2(0.5, 0.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_mjxie")

[node name="MarginContainer" type="MarginContainer" parent="TileMap/CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TileMap/CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="TileMap/CanvasLayer/PanelContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_styles/separator = ExtResource("8_xm0ke")

[node name="PanelContainer2" type="PanelContainer" parent="TileMap/CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0.776471)
offset_left = 42.0
offset_top = 35.0
offset_right = 648.0
offset_bottom = 287.0
scale = Vector2(0.5, 0.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_mjxie")

[node name="MarginContainer" type="MarginContainer" parent="TileMap/CanvasLayer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TileMap/CanvasLayer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="TileMap/CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "fdf"

[node name="HBoxContainer" type="HBoxContainer" parent="TileMap/CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer/Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="TileMap/CanvasLayer/PanelContainer2/MarginContainer/VBoxContainer/Button/HBoxContainer"]
layout_mode = 2
text = "dwdwdw"

[connection signal="map_ready" from="Network" to="TileMap" method="_on_network_map_ready"]
[connection signal="map_update" from="Network" to="TileMap" method="_on_network_map_update"]
